--- a/src/component/header/header.css
+++ b/src/component/header/header.css
@@ -1,159 +1,164 @@
-.fixed{
-    width: 100%;
-    height: max-content;
-    position: fixed;
-    top: 0;
-    left: 50%;
-    background-color: rgb(255, 255, 255);
-    z-index: 1000;
-    transform: translateX(-50%);
-    padding-top: 15px;
-}
+.my-button {
+    background-image: linear-gradient(to right, #00c6ff 0%, #0072ff  51%, #00c6ff  100%);
+    padding: 8px 14px;
+    font-weight: 500;
+    text-align: center;
+    width: max-content;
+    transition: 0.5s;
+    background-size: 200% auto;
+    color: white;            
+    box-shadow: 0 0 20px #eee;
+    border-radius: 6px;
+    text-decoration: none;
+    display: block;
+  }
+
+  .my-button:hover {
+    background-position: right center; /* change the direction of the change here */
+    color: #fff;
+    text-decoration: none;
+  }
 .header{
-    background-color: #fff;
-    padding: 8px 30px;
-    border-radius: 30px;
+    top: 0;
+    left: 0;
+    right: 0;
+    z-index: 1000;
+    position: fixed;
+    padding: 10px;
+    background-color: #ffffff;
     box-sizing: border-box;
-    box-shadow: 0 0 15px rgb(200,200,200);
+    box-shadow: 0 0 20px rgba(192, 192, 192, 0.662);
     
 }
-*{
-    margin: 0;
-    padding: 0;
-    list-style-type: none;
-    box-sizing: border-box;
-    font-family: 'Poppins', sans-serif;
-}
-.bar {
+.header .bar{
     display: flex;
     align-items: center;
+    justify-content: space-around;
+    flex-direction: row;
     position: relative;
     
 }
-.bar .logo{
-
+.header .bar .logoDiv{
     padding: 0;
 }
-.bar .logo img{
-    width: 100px;
+.header .bar .logoDiv .logo{
+    height: 40px;
+    width: auto;
+    cursor: pointer;
 }
-.bar .menuBar{
+.header .bar .menuDiv{
     display: flex;
-    justify-content: space-between;
-}   
-.bar .menuBar .menu{
-    width: 60%;
+    flex-direction: row;
+    justify-content: space-around;
+    padding: 0;
+}
+.header .bar .menuDiv .menu{
+    height: auto;
+    width: max-content;
     display: flex;
+    align-items: center;
+    gap: 34px;
+    padding: 0;
+}
+.header .bar .menuDiv .menu .link{
+    color: #025;
+    font-size: 16px;
+    font-family: Space Grotesk;
+    font-weight: 600;
+    text-decoration: none;
+    position: relative;
+    padding: 5px 0;
+    background-color: white;
+}
+.header .bar .menuDiv .menu .link:hover::before{
+    width: 100%;
+}
+.header .bar .menuDiv .menu .link::before{
+    position: absolute;
+    bottom:-2px;
+    height: 2.5px;
+    
+    width: 0%;
+    content: '';
+    background-color: #0099ff;
+    transition: .2s ease-in;
+}
+.header .bar .menuDiv .btn-contact{
+    font-family: Space Grotesk;
+    padding: 6px 14px;
+    border-radius: 6px;
+    font-size: 16px;
+    color: #ffffff;
+}
+.header .bar .menuDiv .menu .link.active::before{
+    width: 100%;
+}
+
+.header .bar .btnDiv {
+    display: none;
+    justify-content: center;
+}
+.header .bar .btnDiv .btn-toggle{
+    width: max-content;
+    font-size: 26px;
+    color: #0072ff;
+    padding: 0 6px;
+    border-radius: 4px;
+    --border: 1.5px solid #025;
+    cursor: pointer;
+
+}
+.header .bar .phoneDiv{
+    display: none;
     align-items: center;
     justify-content: center;
-    gap: 30px;
-} 
-.bar .menuBar .menu .link{
-    cursor: pointer;
-    font-size: 16px;
-    color: #035;
-    font-family: DM Sans;
-    font-weight: 500;
-    text-decoration: none;
-}   
-.bar .menuBar .menu .link:hover{
-    color: #4464d6;
 }
-.bar .menuBar .appointment{
-    width: 40%;
-    display: flex;
-    justify-content: right;
-    height: max-content;
-}
-.bar .menuBar .appointment span{
-    cursor: pointer;
-    font-size: 15px;
-    color: #035;
-    display: flex;
-    font-weight: 500;
-    align-items: center;
-    font-family: DM Sans;
-    flex-direction: row;
-    gap: 5px;
-    height: max-content;
-}
-.bar .menuBar .appointment span i{
-    
+.header .bar .phoneDiv .btn-phone{
+    height: 35px;
+    width: 35px;
     border-radius: 50%;
-    background-color: blue;
-    color: white;
-    font-size: 10px;
-    padding: 6px;
-    border: 0.5px solid gray;
-}
-.bar .btnMenu{
-    font-size: 18px;
-    justify-content: right;
-    display: none;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-size: 14px;
 
+    
 }
-.bar .btnMenu i{
-    cursor: pointer;
-}
-
 #show{
     left: 0;
-    
 }
- @media screen and (max-width:767.98px) {
-    .fixed{
-        padding-top: 10px;
-    }
-    .header{
-        border-radius: 20px;
-    }
-    .bar .logo img{
-        width: 90px;
-    }
-    .bar .menuBar {
-        z-index: 2000;
-        margin: 0 !important;
-        padding: 0 !important;
+
+
+@media screen and (max-width:767.98px ) {
+    .header .bar .menuDiv{
         display: flex;
-        justify-content: left;
         flex-direction: column;
         position: absolute;
+        align-items: center;
+        --justify-content: center;
+        top: 50px;
+        width: 100%;
         left: -1000px;
-        top: 150%;
-        background-color: #EBF5FB ;
-        border-radius: 8px;
-        box-shadow: 0 0 12px silver;
-        transition: .3s ease-in;
-        
+        right: 0;
+        padding: 20px;
+        row-gap: 30px;
+        background-color: rgb(255, 255, 255);
+        transition: 0.3s ease-in-out;
+        box-shadow: 0 0 10px rgba(192, 192, 192, 0.612);
     }
-    .bar .menuBar .menu{
-        width: 100%;
+    .header .bar .menuDiv .menu{
         display: flex;
-        justify-content: left;
         flex-direction: column;
-        gap: 0;
-        
+        gap: 30px;
     }
-    .bar .menuBar .appointment{
-        width: 100%;
-    }
-    .bar .menuBar .menu .link,.bar .menuBar .appointment span{
-        width: 100%;
-        transition: 0.2s ease-in-out;
-        padding: 10px 12px;
-    }
-    .bar .menuBar .menu link:hover,.bar .menuBar .appointment span:hover{
-        background-color: #fff ;
-        transform: scale(1.02);
-    }
-    .bar .btnMenu{
+    .header .bar .btnDiv {
         display: flex;
     }
-    
- }
- @media  screen and (max-width:576px) {
-    .fixed{
-        top:-2px;
-        padding-top: 0;
+    .header .bar .phoneDiv{
+        display: flex;
     }
- }                            
+}
+
+
+
+
