--- a/src/component/project/project.css
+++ b/src/component/project/project.css
@@ -1,6 +1,6 @@
 .project{
     padding: 15px;
-    padding-top: 70px;
+    margin-top: 50px;
     scroll-behavior: smooth;
   }
   h1,h2,h3,h4,h5,h6{
@@ -20,7 +20,7 @@
     
 }
 .project .section1{
-  padding: 50px 15%;
+  padding: 60px 15%;
   flex-direction: column;
   margin-bottom: 15px;
 }
@@ -79,6 +79,13 @@
 .project .section4 .featureDiv{
   display: flex;
   justify-content: center;
+}
+.project .section4 .featureDiv .featureBox{
+  transition: .3s ease-in-out;
+}
+.project .section4 .featureDiv .featureBox:hover{
+  transform: scale(1.02);
+  cursor: pointer;
 }
 .project .section5{
   flex-direction: column;
@@ -173,7 +180,10 @@
 
 }
 .project .section9 .contentDiv{
-  background-color: #0025FF;
+  background: #00c6ff;  /* fallback for old browsers */
+  background: -webkit-linear-gradient(to right, #0072ff, #00c6ff);  /* Chrome 10-25, Safari 5.1-6 */
+  background: linear-gradient(to right, #0072ff, #00c6ff); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+
   display: flex;
   justify-content: center;
   border-radius: 20px;
@@ -198,16 +208,15 @@
   font-family: DM Sans;
   font-weight: 500;  
 }
-.project .section9 .contentDiv .content .btn{
-
+.project .section9 .contentDiv .content .button{
+  width: max-content;
   font-size: 16px;
-  color: blue;
+  color: white;
   font-family: DM Sans;
   font-weight: 500;
-  background-color: white;
-  padding: 10px 18px;
-  width: max-content;
-  border-radius: 0;
+  background-image: linear-gradient(to right, #005C97 0%, #363795  51%, #005C97  100%);
+  border-radius: 6px;
+  box-shadow: 0 0 5px rgba(255, 255, 255, 0.584);
   
 }
 .project .section9 .contentDiv .imgBox{
