--- a/src/component/other/myService/myService.css
+++ b/src/component/other/myService/myService.css
@@ -17,7 +17,7 @@
     background: #0052D4;  /* fallback for old browsers */
     background: -webkit-linear-gradient(36deg, #6FB1FC, #4364F7, #0052D4);  /* Chrome 10-25, Safari 5.1-6 */
     background: linear-gradient(36deg, #6FB1FC, #4364F7, #0052D4); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
-    
+    background: #0052D4;
     color: white;
     width: 50px;
 }
