--- a/src/component/other/software/software.css
+++ b/src/component/other/software/software.css
@@ -25,9 +25,9 @@
     background: #1488CC;  /* fallback for old browsers */
     background: -webkit-linear-gradient(to right, #2B32B2, #1488CC);  /* Chrome 10-25, Safari 5.1-6 */
     background: linear-gradient(to right, #2B32B2, #1488CC); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
-     
+     background: white;
     --color: #025;
-    color: white;
+    color: rgb(0, 0, 0);
     box-shadow: 1px 1px 1px silver;
     font-size: 14px;
     font-weight: 500;
