--- a/src/component/other/counter/counter.css
+++ b/src/component/other/counter/counter.css
@@ -27,3 +27,21 @@
     font-size: 20px;
     font-weight: 600;
 }
+@media screen and (min-width:1400px) {
+    .counter{
+        padding: 14px;
+    }
+    .counter .number{
+        font-size: 90px;
+    
+    }
+    .counter .text{
+        text-align: center;
+        font-size: 20px;
+
+    }
+    .counter .number i{
+        font-size: 28px;
+        font-weight: 600;
+    }
+}
