--- a/src/component/other/service/service.css
+++ b/src/component/other/service/service.css
@@ -31,3 +31,22 @@
 .service:hover{
     transform: scale(1.02);
 }
+
+
+@media screen and (min-width:1400px) {
+    .service{
+        border-radius: 16px;
+        width: 100%;
+        height: 400px;
+        gap: 20px;
+    }
+    .service img{
+        height: 50px;
+    }
+    .service .title{
+        font-size: 26px;
+    }
+    .service .description{
+        font-size: 18px;
+    }
+}
